[package]
name = "fromhocon"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.56"
hocon = { version = "0.7.0", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
clap = { version = "2.34.0", default-features = false }
